tests/NormalTests/paczka1/fuzzy1/61389416.err
Error in line 28: Hk0r9o8K S265 97,2
Error in line 38: A132 S939 48,5
